1999-10-18  Gary Houston  <ghouston@freewire.co.uk>

	* fports.c (scm_fdes_to_port): always set rw_random if the fdes is
	random access.  rw_active needs to be maintained even for single
	directional ports, otherwise scm_seek and probably other things are
	broken.  (thanks to Roland Orre).

	* strports.c (scm_mkstrport): set rw_random to 1 unconditionally.

	* ports.c (scm_add_to_port_table): initialise rw_random to 0.

	* ports.h (scm_port): change the comments on rw_random and rw_active.

1999-10-11  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* ioext.c: Added #include "feature.h".

	These changes turns `delay' into a memoizing macro.  This is
	because it may be expanded before evaluation if it occurs at the
	beginning of a body.  (Thanks to Lauri Alanko.)
	
	* eval.c, eval.h (scm_sym_delay): New global symbol.

	* tags.h (SCM_IM_DELAY): New immediate symbol.

	* print.c (scm_isymnames): Printed representation.

	* eval.c (unmemocopy, SCM_CEVAL): Handle SCM_IM_DELAY.
	(scm_m_delay): Turned into a memoizing macro.

	* Makefile.am (libguile_la_LDFLAGS): Bumped libguile version.

1999-10-11  Jim Blandy  <jimb@savonarola.red-bean.com>

	* gh_data.c (gh_ints2scm, gh_doubles2scm): Make sure elements are
	protected from GC while building the vector.  (Thanks to Bernard
	Urban and Greg Harvey.)

1999-10-08  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* throw.c (handler_message): Display backtrace if backtraces
	enabled.

1999-10-05  Jim Blandy  <jimb@savonarola.red-bean.com>

	* Makefile.in, scmconfig.h.in: Deleted from CVS repository.  Run
	the autogen.sh script to create generated files like these.

	* numbers.c (scm_string_to_number): Signal an error if radix is
	less than two.  (Thanks to Jorgen Schaefer.)

	* print.c (scm_write, scm_display, scm_newline, scm_write_char):
	Don't assume that the current output port is valid.  Somebody
	might close it.  (Thanks to Bernard Urban.)

1999-10-02  Jim Blandy  <jimb@zwingli.cygnus.com>

	* scmconfig.h.in: Regenerated.
