@@ -1,3 +1,9 @@
+1999-10-20  Gary Houston  <ghouston@freewire.co.uk>
+
+	* ports.c (scm_seek): Add a special case for SEEK_CUR, offset 0,
+	so that unread chars are not needlessly discarded.  (thanks to
+	Roland Orre).
+
 1999-10-18  Gary Houston  <ghouston@freewire.co.uk>
 
 	* fports.c (scm_fdes_to_port): always set rw_random if the fdes is
